Fix phantom module compile issues and add First Team adapter integration